--- a/喜马拉雅/classes/discover(发现)/view/circle(圈子)/cicle/RCRecommendPostViewCell.xib
+++ b/喜马拉雅/classes/discover(发现)/view/circle(圈子)/cicle/RCRecommendPostViewCell.xib
@@ -73,7 +73,7 @@
                     </imageView>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="a4A-bw-07H">
                         <rect key="frame" x="-8" y="0.0" width="336" height="8"/>
-                        <color key="backgroundColor" red="0.87450980389999999" green="0.87450980389999999" blue="0.87450980389999999" alpha="0.57999999999999996" colorSpace="custom" customColorSpace="sRGB"/>
+                        <color key="backgroundColor" red="0.0" green="0.47843137250000001" blue="1" alpha="0.059999999999999998" colorSpace="calibratedRGB"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="8" id="m6D-ce-tZe"/>
                         </constraints>
