--- a/喜马拉雅/classes/discover(发现)/view/AlbumDeail(专辑详情)/RCAlbumSectionHeaderView.xib
+++ b/喜马拉雅/classes/discover(发现)/view/AlbumDeail(专辑详情)/RCAlbumSectionHeaderView.xib
@@ -28,7 +28,7 @@
                     <nil key="highlightedColor"/>
                 </label>
             </subviews>
-            <color key="backgroundColor" red="0.87450980389999999" green="0.87450980389999999" blue="0.87450980389999999" alpha="0.52000000000000002" colorSpace="custom" customColorSpace="sRGB"/>
+            <color key="backgroundColor" red="0.0" green="0.47843137250000001" blue="1" alpha="0.059999999999999998" colorSpace="calibratedRGB"/>
             <constraints>
                 <constraint firstItem="BtR-Bc-DAu" firstAttribute="leading" secondItem="U6b-Vx-4bR" secondAttribute="leading" constant="8" id="0u3-7N-Xn2"/>
                 <constraint firstAttribute="bottom" secondItem="RD0-fm-GbP" secondAttribute="bottom" id="Xeu-vf-Eiu"/>
@@ -39,7 +39,7 @@
                 <outlet property="albumCountlabel" destination="BtR-Bc-DAu" id="YGf-IN-5Pd"/>
                 <outlet property="sortButton" destination="RD0-fm-GbP" id="7gp-9B-88a"/>
             </connections>
-            <point key="canvasLocation" x="250" y="335"/>
+            <point key="canvasLocation" x="394" y="293"/>
         </collectionReusableView>
     </objects>
     <resources>
