--- a/喜马拉雅/classes/discover(发现)/view/circle(圈子)/postDeail(评论)/RCCommentViewCell.xib
+++ b/喜马拉雅/classes/discover(发现)/view/circle(圈子)/postDeail(评论)/RCCommentViewCell.xib
@@ -147,7 +147,7 @@
                                 </userDefinedRuntimeAttributes>
                             </label>
                         </subviews>
-                        <color key="backgroundColor" red="0.87450980389999999" green="0.87450980389999999" blue="0.87450980389999999" alpha="0.33000000000000002" colorSpace="custom" customColorSpace="sRGB"/>
+                        <color key="backgroundColor" red="0.0" green="0.47843137250000001" blue="1" alpha="0.059999999999999998" colorSpace="calibratedRGB"/>
                         <constraints>
                             <constraint firstItem="cTK-Oy-saj" firstAttribute="top" secondItem="PSn-as-Rz7" secondAttribute="bottom" id="77G-p7-sFb"/>
                             <constraint firstAttribute="trailing" secondItem="cTK-Oy-saj" secondAttribute="trailing" constant="4" id="7Jb-zQ-taa"/>
