--- a/喜马拉雅/classes/discover(发现)/view/hotAudio(热门声音)/RCHotAudioViewCell.xib
+++ b/喜马拉雅/classes/discover(发现)/view/hotAudio(热门声音)/RCHotAudioViewCell.xib
@@ -170,7 +170,7 @@
                     <constraint firstItem="MUz-DM-8lk" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" constant="-8" id="ujl-l7-Gzu"/>
                 </constraints>
             </tableViewCellContentView>
-            <color key="backgroundColor" red="0.90196078430000004" green="0.90196078430000004" blue="0.90196078430000004" alpha="1" colorSpace="calibratedRGB"/>
+            <color key="backgroundColor" red="0.0" green="0.47843137250000001" blue="1" alpha="0.059999999999999998" colorSpace="calibratedRGB"/>
             <connections>
                 <outlet property="createTImeLabel" destination="lHX-Oa-MMp" id="AY9-Y1-K3A"/>
                 <outlet property="downloadButton" destination="Ge0-08-zSc" id="Bhl-CG-Vnx"/>
